syntax = "proto3";

option csharp_namespace = "CarManagementService";

service CarService {
  rpc GetAllCars (Empty) returns (CarList);
  rpc GetCarByID (CarRequest) returns (Car);
  rpc AddCar (Car) returns (CarResponse);
  rpc UpdateCar (Car) returns (CarResponse);
  rpc DeleteCar (CarRequest) returns (CarResponse);
}

message Empty{}

message CarRequest {
  int32 id = 1;
}

message Car {
  int32 id = 1;
  string name = 2;
  string model = 3;
  int32 year = 4;
  string status = 5;
}

message CarList {
  repeated Car cars = 1;
}

message CarResponse {
  bool success = 1;
  string message = 2;
}